Crash during lattice modifier evaluation during data transfer operator call with python #96888

Closed
opened 2022-03-30 13:04:51 +02:00 by Simon Thommes · 13 comments
Member

System Information
Operating system: Linux-5.15.23-76051523-generic-x86_64-with-glibc2.34 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-30 09:41, hash: ebb49ddd83
Worked: (newest version of Blender that worked as expected)

Short description of error
When running bpy.ops.object.data_transfer() with python Blender crashes while evaluating a lattice modifier.

Exact steps for others to reproduce the error
Run script in following file:
lattice_evaluation_crash.blend

**System Information** Operating system: Linux-5.15.23-76051523-generic-x86_64-with-glibc2.34 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.54 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-30 09:41, hash: `ebb49ddd83` Worked: (newest version of Blender that worked as expected) **Short description of error** When running `bpy.ops.object.data_transfer()` with python Blender crashes while evaluating a lattice modifier. **Exact steps for others to reproduce the error** Run script in following file: [lattice_evaluation_crash.blend](https://archive.blender.org/developer/F12956811/lattice_evaluation_crash.blend)
Author
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check in a bit.

Can confirm, will check in a bit.
Member

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'
Member

Seems like the operator needs the active_object correctly in the context (asserts if it is not a mesh - should not crash though, true).
If I override this as well, I dont get a crash.
Does this yield the correct results for you?

import bpy

bpy.ops.object.data_transfer(
    {
        "active_object": bpy.data.objects.get("Cube"),
        "object": bpy.data.objects.get("Cube"),
        "selected_editable_objects": [bpy.data.objects.get("Cube.001")],
    },
    data_type="UV",
    use_create=True,
    loop_mapping="NEAREST_POLYNOR",
    poly_mapping="NEAREST",
    layers_select_src="ALL",
    layers_select_dst="NAME",
    mix_mode="REPLACE",
)

This is where the assert happens btw.:

1   __pthread_kill_implementation                             0x7ffff7a90f0c 
2   raise                                                     0x7ffff7a40a36 
3   abort                                                     0x7ffff7a2a82f 
4   _BLI_assert_abort             BLI_assert.c           46   0x10aa301e     
5   makeDerivedMesh               DerivedMesh.cc         1766 0x427e041      
6   mesh_get_eval_final           DerivedMesh.cc         1822 0x427e2c9      
7   dt_layers_select_src_itemf    object_data_transfer.c 150  0x56a4ef9      
8   dt_layers_select_itemf        object_data_transfer.c 239  0x56a5348      
9   RNA_property_enum_items_ex    rna_access.c           1469 0x4c30941      
10  RNA_property_enum_items       rna_access.c           1500 0x4c30a48      
11  RNA_property_enum_value       rna_access.c           1644 0x4c31032      
12  pyrna_string_to_enum          bpy_rna.c              1238 0x4e9f91c      
13  pyrna_py_to_prop              bpy_rna.c              1778 0x4ea0d9a      
14  pyrna_pydict_to_props         bpy_rna.c              1493 0x4ea02fc      
15  pyop_call                     bpy_operator.c         259  0x4ebbb2f      
16  cfunction_call                methodobject.c         552  0xf6399c4      
17  _PyObject_MakeTpCall          call.c                 215  0xf5f3e28      
18  _PyObject_VectorcallTstate    abstract.h             112  0x3d8774b      
19  _PyObject_VectorcallTstate    abstract.h             99   0x3d8774b      
20  PyObject_Vectorcall           abstract.h             123  0x3d8774b      
... <More>
Seems like the operator needs the `active_object` correctly in the context (asserts if it is not a mesh - should not crash though, true). If I override this as well, I dont get a crash. Does this yield the correct results for you? ``` import bpy bpy.ops.object.data_transfer( { "active_object": bpy.data.objects.get("Cube"), "object": bpy.data.objects.get("Cube"), "selected_editable_objects": [bpy.data.objects.get("Cube.001")], }, data_type="UV", use_create=True, loop_mapping="NEAREST_POLYNOR", poly_mapping="NEAREST", layers_select_src="ALL", layers_select_dst="NAME", mix_mode="REPLACE", ) ``` This is where the assert happens btw.: ``` 1 __pthread_kill_implementation 0x7ffff7a90f0c 2 raise 0x7ffff7a40a36 3 abort 0x7ffff7a2a82f 4 _BLI_assert_abort BLI_assert.c 46 0x10aa301e 5 makeDerivedMesh DerivedMesh.cc 1766 0x427e041 6 mesh_get_eval_final DerivedMesh.cc 1822 0x427e2c9 7 dt_layers_select_src_itemf object_data_transfer.c 150 0x56a4ef9 8 dt_layers_select_itemf object_data_transfer.c 239 0x56a5348 9 RNA_property_enum_items_ex rna_access.c 1469 0x4c30941 10 RNA_property_enum_items rna_access.c 1500 0x4c30a48 11 RNA_property_enum_value rna_access.c 1644 0x4c31032 12 pyrna_string_to_enum bpy_rna.c 1238 0x4e9f91c 13 pyrna_py_to_prop bpy_rna.c 1778 0x4ea0d9a 14 pyrna_pydict_to_props bpy_rna.c 1493 0x4ea02fc 15 pyop_call bpy_operator.c 259 0x4ebbb2f 16 cfunction_call methodobject.c 552 0xf6399c4 17 _PyObject_MakeTpCall call.c 215 0xf5f3e28 18 _PyObject_VectorcallTstate abstract.h 112 0x3d8774b 19 _PyObject_VectorcallTstate abstract.h 99 0x3d8774b 20 PyObject_Vectorcall abstract.h 123 0x3d8774b ... <More> ```
Author
Member

Ah, interesting!

Yea, that seems to work, thanks! I always found it very unpredictable what an operator actually needs to have overridden, but I guess I should just override everything that could be potentially needed.
But yea, it probably still shouldn't crash. The issue seems to also just be with the lattice modifier from what I have seen.

But for my case, this definitely avoids the issue.

Ah, interesting! Yea, that seems to work, thanks! I always found it very unpredictable what an operator actually needs to have overridden, but I guess I should just override everything that could be potentially needed. But yea, it probably still shouldn't crash. The issue seems to also just be with the lattice modifier from what I have seen. But for my case, this definitely avoids the issue.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'
Philipp Oeser self-assigned this 2022-04-05 09:38:54 +02:00

This issue was referenced by 1d18c0682f

This issue was referenced by 1d18c0682fa43324193639c16fcee0d22c34d15e
Member

Lets still get rid of the crash ( D14552 will also let you override "object" - no need to override "active_object" then )

Lets still get rid of the crash ( [D14552](https://archive.blender.org/developer/D14552) will also let you override "object" - no need to override "active_object" then )
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96888
No description provided.